unpackaged/main/default/objects/Audit_Trail_Error__c/Audit_Trail_Error__c.object-meta.xml
<CustomObject>
    <label>Audit Trail Error</label>
    <nameField>
        <displayFormat>AER-{0}</displayFormat>
        <label>Audit Trail Error Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Trail Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>