unpackaged/main/default/objects/Audit_Trail_Error__c/fields/Dev_Audit_Notes__c.field-meta.xml
<CustomField>
    <fullName>Dev_Audit_Notes__c</fullName>
    <description>Additional Notes Captured by Developer at time of error/Exception as needed.</description>
    <label>Dev Audit Notes</label>
    <length>250</length>
    <type>Text</type>
</CustomField>