unpackaged/main/default/objects/Audit_Trail_Error__c/fields/errorFields__c.field-meta.xml
<CustomField>
    <fullName>errorFields__c</fullName>
    <description>Column that contains specific fields when an error occurs.</description>
    <label>errorFields</label>
    <length>250</length>
    <type>Text</type>
</CustomField>