unpackaged/main/default/objects/Audit_Trail_Error__c/fields/errorMessage__c.field-meta.xml
<CustomField>
    <fullName>errorMessage__c</fullName>
    <description>ErrorMessage that is returned from Apex/Lightning</description>
    <label>errorMessage</label>
    <length>250</length>
    <type>Text</type>
</CustomField>