unpackaged/main/default/objects/Audit_Trail_Error__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <description>Developer Name for where error Occurred. Should match Apex/Lightning component.</description>
    <label>Module</label>
    <length>50</length>
    <type>Text</type>
</CustomField>