unpackaged/main/default/objects/Audit_Trail_Error__c/fields/SourceId__c.field-meta.xml
<CustomField>
    <fullName>SourceId__c</fullName>
    <label>SourceId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>