unpackaged/main/default/objects/Audit_Trail_Error__c/fields/StatusCode__c.field-meta.xml
<CustomField>
    <fullName>StatusCode__c</fullName>
    <description>Any Apex/Lightning Status Code that is returned.</description>
    <label>StatusCode</label>
    <length>60</length>
    <type>Text</type>
</CustomField>