unpackaged/main/default/objects/Audit_Trail_Error__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>errorFields__c</columns>
    <columns>errorMessage__c</columns>
    <columns>Module__c</columns>
    <columns>Dev_Audit_Notes__c</columns>
    <columns>StatusCode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>